# sae

./: .gitignore  LICENSE  README.md  pyproject.toml  submit.sh
artefacts/: fused_mse_aux_loss_test_trace.json  sae-n_feat=1024-d_model=32-spars=0.99.pt  sparse_matmul_test_trace.json  tms_sae-n_feat=1024-d_model=32-spars=0.99.pt  toy_model-n_feat=1024-d_model=32-spars=0.99.pt  toy_model-spars=0.9.pt  toy_model-spars=0.99.pt
recurrentgemma/: __init__.py  array_typing.py  common.py  griffin.py  layers.py  modules.py  sampler.py
scripts/: get_recurrentgemma_activations.py  toy_models.py  train_tms.py  train_tms_model.py  train_tms_sae.py
sparse_autoencoder/: __init__.py  array_typing.py  model.py  sae.py  sae_test.py  train.py
sparse_autoencoder/modules/: activations.py  activations_test.py  distributed.py  loss.py  loss_test.py  matmul.py  norm.py  norm_test.py  sparse_matmul.py  sparse_matmul_test.py  test_utils.py  utils.py
sparse_autoencoder/tms/: sae.py  sae_test.py  toy_model.py  toy_model_test.py  train.py  train_sae.py  train_toy_model.py  utils.py
sparse_autoencoder/utils/: logger.py
visualization/: app.py  server.py
visualization/templates/: base.html  home.html
